--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^6.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
